{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 67,
  "lineage": "1579ab38-adc0-c46f-5446-620b1a0c9b17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb6b8a02d54d3aa1",
            "arn": "arn:aws:ec2:eu-north-1:339712844630:elastic-ip/eipalloc-0eb6b8a02d54d3aa1",
            "association_id": "eipassoc-0c697b981caacd6d5",
            "domain": "vpc",
            "id": "eipalloc-0eb6b8a02d54d3aa1",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-030454f2df39288bc",
            "private_dns": "ip-10-0-1-53.eu-north-1.compute.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-13-61-113-182.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.113.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0368b2c10d7184bc7",
            "arn": "arn:aws:ec2:eu-north-1:339712844630:instance/i-0e3b19610f9bb1248",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3b19610f9bb1248",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "newlaptop_pem_download",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09402044e58d49008",
            "private_dns": "ip-10-0-1-211.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-16-16-204-208.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.204.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2fcf625f8ba94c7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b4fb21831124d93",
            "tags": {
              "Name": "Ec2_instance"
            },
            "tags_all": {
              "Name": "Ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0367def4411a564aa"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:internet-gateway/igw-09c54b419d01325aa",
            "id": "igw-09c54b419d01325aa",
            "owner_id": "339712844630",
            "tags": {
              "Name": " aws_internet_gateway_test"
            },
            "tags_all": {
              "Name": " aws_internet_gateway_test"
            },
            "vpc_id": "vpc-0e83666ceb67f3f4b"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb6b8a02d54d3aa1",
            "association_id": "eipassoc-0c697b981caacd6d5",
            "connectivity_type": "public",
            "id": "nat-041e71876b54626bc",
            "network_interface_id": "eni-030454f2df39288bc",
            "private_ip": "10.0.1.53",
            "public_ip": "13.61.113.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b4fb21831124d93"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09c54b419d01325aa",
            "id": "r-rtb-04c37fd7820b01e4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c37fd7820b01e4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.route_table_public",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04ff162936a45eea61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-041e71876b54626bc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ff162936a45eea6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_private",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:route-table/rtb-04ff162936a45eea6",
            "id": "rtb-04ff162936a45eea6",
            "owner_id": "339712844630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-041e71876b54626bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_private"
            },
            "tags_all": {
              "Name": "route_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83666ceb67f3f4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:route-table/rtb-04c37fd7820b01e4c",
            "id": "rtb-04c37fd7820b01e4c",
            "owner_id": "339712844630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c54b419d01325aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83666ceb67f3f4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0369efafed1c6d396",
            "route_table_id": "rtb-04ff162936a45eea6",
            "subnet_id": "subnet-0d730bbcd2f6702bf"
          },
          "dependencies": [
            "aws_route_table.route_private",
            "aws_subnet.subnet_private",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0329d6b09125f03eb",
            "route_table_id": "rtb-04c37fd7820b01e4c",
            "subnet_id": "subnet-08b4fb21831124d93"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:security-group/sg-0367def4411a564aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0367def4411a564aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250129054140036300000003",
            "name_prefix": "terraform-",
            "owner_id": "339712844630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_Security_Group"
            },
            "tags_all": {
              "Name": "EC2_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83666ceb67f3f4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:subnet/subnet-0d730bbcd2f6702bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d730bbcd2f6702bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712844630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet_private"
            },
            "tags_all": {
              "Name": "aws_subnet_private"
            },
            "vpc_id": "vpc-0e83666ceb67f3f4b"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:subnet/subnet-08b4fb21831124d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b4fb21831124d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712844630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": " aws_subnet_public "
            },
            "tags_all": {
              "Name": " aws_subnet_public "
            },
            "vpc_id": "vpc-0e83666ceb67f3f4b"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:vpc/vpc-0e83666ceb67f3f4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a36087bba57f061",
            "default_route_table_id": "rtb-03c371a494918bb58",
            "default_security_group_id": "sg-0cc2ae0db410a2547",
            "dhcp_options_id": "dopt-002b56ad8328e8504",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e83666ceb67f3f4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c371a494918bb58",
            "owner_id": "339712844630",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}